Source/WebKit/UIProcess/WebsiteData/soup/WebsiteDataStoreSoup.cpp
@@ -29,6 +29,7 @@
 
 #include "NetworkProcessMessages.h"
 #include "WebCookieManagerProxy.h"
+#include "WebCoreArgumentCoders.h"
 #include "WebProcessPool.h"
 #include "WebsiteDataStoreParameters.h"
 
